# Crisis-MMD-Classification

./: LICENSE  README.md  captiion_plus_text_infer.py  captiion_plus_text_train.py  multimodal_inference.py  pyproject.toml  requirements.txt  run.slurm
notebooks/: vlm_instruct.ipynb
src/data/: cast_images.py  exploration.py
src/models/: caption_plus_text_infer.py  caption_plus_text_inference.py  caption_plus_text_train.py  multimodal_inference.py  multimodal_train.py  translation.py
